Closed Bug 1498287 Opened 6 years ago Closed 6 years ago

browser.xhtml ignores RTL via intl.uidirection: devtools/client/inspector/animation/test/browser_animation_current-time-scrubber-rtl.js is permaorange

Categories

(DevTools :: Inspector: Animations, defect, P2)

defect

Tracking

(firefox68 fixed)

RESOLVED FIXED
Firefox 68
Tracking Status
firefox68 --- fixed

People

(Reporter: bgrins, Assigned: bdahl)

References

Details

Attachments

(1 file)

It appears that RTL is broken (via `./mach run --temp-profile --setpref intl.uidirection=1`), which sort of makes sense since we'll need to set the [dir] attribute: https://searchfox.org/mozilla-central/rev/1ce4e8a5601da8e744ca6eda69e782318afab54d/browser/base/content/aboutNetError-new.xhtml#30.
Summary: browser.xhtml: devtools/client/inspector/animation/test/browser_animation_current-time-scrubber-rtl.js is permaorange → browser.xhtml ignores RTL via intl.uidirection: devtools/client/inspector/animation/test/browser_animation_current-time-scrubber-rtl.js is permaorange
See Also: → 1492582

This bug has not been updated in the last 3 months. Resetting the assignee field.
Please, feel free to pick it up again and add a comment outlining your plans for it if you do still intend to work on it.
This is just trying to clean our backlog of bugs and make bugs available for people.

Assignee: bgrinstead → nobody
Status: ASSIGNED → NEW
No longer blocks: top-level-html
Depends on: 1533881
Blocks: 1533881
No longer depends on: 1533881

Moves most of the RTL handling from XULDocument into Document. Creates
a new static class that listens to the direction pref change and notifies
all the documents when it changes.

Pushed by bdahl@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/956f2266fdfb Support RTL pref in non-XUL documents too. r=smaug
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 68
Assignee: nobody → bdahl
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: