Bug 1498287 - Support RTL pref in non-XUL documents too.

See TODO